--- a/Tutorien/Tutorium 04.05..ipynb
+++ b/Tutorien/Tutorium 04.05..ipynb
@@ -183,6 +183,15 @@
     "collapsed": false,
     "is_executing": true
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
