Editieren von den Notizen

--- a/Tutorien/Tutorium 04.05..ipynb
+++ b/Tutorien/Tutorium 04.05..ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#Shortcuts bei Jupyter notebook:\n",
+    "# Shortcuts bei Jupyter notebook:\n",
     "    #a: erstellt Zelle drüber\n",
     "    #b: zelle drunter\n",
     "    #c: copy\n",
@@ -21,8 +21,13 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#mögliche Datentypen: integer (ganze Zahlen, x: int = 5), float (Kommazahlen), Boolean's (bool=True, 0 und 1 für True und False), string (Text in Anführungszeichen, addieren mit \"+\") geht auch mit f'...'\n",
-    "#herausfinden des Typs: type(x)"
+    "# mögliche Datentypen\n",
+    "    #integer (ganze Zahlen, x: int = 5),\n",
+    "    #float (Kommazahlen),\n",
+    "    #Boolean's (bool=True, 0 und 1 für True und False),\n",
+    "    #string (Text in Anführungszeichen, addieren mit \"+\") geht auch mit f'...'\n",
+    "\n",
+    "    #herausfinden des Typs: type(x)"
    ],
    "metadata": {
     "collapsed": false
@@ -31,63 +36,24 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Funktionen\n",
     "#.upper: macht alles in Großbuchstaben\n",
     "#anschauen von Funktionen: ? hinter Befehl\n",
     "#.startswith(): Testet wie ein Object anfängt\n",
-    "#.split(\"ZEICHEN\"): Trennt Satz an diesem Zeichen / .join macht das Gegenteil"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "#Indizes: Python ist 0 based und zweites Element ist exklusiv\n",
+    "#.split(\"ZEICHEN\"): Trennt Satz an diesem Zeichen / .join macht das Gegenteil\n",
     "\n",
-    "#Listen\n",
-    "    #.pop: rausnehmen und ausgeben von Objekten aus Listen\n",
-    "    #.remove: rauslöschen von Objekten aus Listen\n",
-    "    #.append: Liste erweitern\n",
-    "    #.sort: sortiert Liste nach erstem Buchstaben"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# tuple: feste Liste, es kann nichts hinzugefügt oder geändert werden\n",
-    "    #len: gibt Länge\n",
-    "    #entpacken über einzelne Variablen"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
     "#erstellen von Dictionaries über \"dict\"\n",
     "#.get: testen von Funktionen, wenn Name nicht drin gibt es kein Ergebnis (aber KEINEN Fehler!)\n",
     "#.enumerate: ordnet Variablen Zahlen zu (in loops ist es schlau zwei Variablen anzugeben: eine für den Index, der andere für die Variable! Sonst gibts nen Tupel, das entpackt werden muss)\n",
     "#.intersection: zeigt Objekte, die in zwei Mengen drin sind\n",
-    "#.union: vereint zwei Mengen"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
+    "#.union: vereint zwei Mengen\n",
+    "\n",
     "#ungleich: !=\n",
     "#>=\n",
     "#<=\n",
     "#--> Ausgabe: Boolean\n",
     "\n",
-    "#is: Überprüft ob Objekte gleich sind, schaut sich die IDs an! Schaut ob Objekte exakt dasselbe sind"
+    "#is: Überprüft ob Objekte gleich sind, schaut sich die IDs an! Schaut ob Objekte exakt dasselbe sind\n"
    ],
    "metadata": {
     "collapsed": false
@@ -123,7 +89,36 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#gezielt Funktionen aus Paketen importieren: \"from package import function as variable\n",
+    "# Indizes\n",
+    " #Python ist 0 based und zweites Element ist exklusiv\n",
+    "\n",
+    "# Listen\n",
+    "    #.pop: rausnehmen und ausgeben von Objekten aus Listen\n",
+    "    #.remove: rauslöschen von Objekten aus Listen\n",
+    "    #.append: Liste erweitern\n",
+    "    #.sort: sortiert Liste nach erstem Buchstaben"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# tuple\n",
+    "    #feste Liste, es kann nichts hinzugefügt oder geändert werden\n",
+    "    #len: gibt Länge\n",
+    "    #entpacken über einzelne Variablen"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Packages und Tipps\n",
+    "#gezielt Funktionen aus Paketen importieren: from package import function as variable\n",
     "\n",
     "#Numpy ist gut für mathematischen Operationen und effizient (schnelle Rechenleistung)\n",
     "#Pandas ist visuell schön und baut auf Numpy auf und ist zum Anschauen/Bearbeiten von z.B. DataFrames geeignet"
@@ -168,27 +163,6 @@
     "\n",
     "#Jupyter Notebooks benutzen! import Befehle aus .py Dateien sind aber aufgeräumter"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "3+5\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "is_executing": true
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
