Kommentare zum Code eingefügt.

--- a/Testing/Dario_Test_Normalisierung.ipynb
+++ b/Testing/Dario_Test_Normalisierung.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-05-23T14:08:35.013614Z",
-     "start_time": "2023-05-23T14:08:34.762192Z"
+     "end_time": "2023-05-23T19:46:11.162876600Z",
+     "start_time": "2023-05-23T19:46:08.883679800Z"
     }
    },
    "outputs": [],
@@ -17,21 +17,44 @@
     "import re\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "NormalisierungsDatensatz = pd.read_csv('/Users/dario/Documents/GitHub/topic02_team02/DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
+    "NormalisierungsDatensatz = pd.read_csv('../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv')\n",
     "\n",
-    "Wa = float()\n",
-    "Wn = min(NormalisierungsDatensatz ['DMS_score'])\n",
-    "Wh = max(NormalisierungsDatensatz ['DMS_score'])\n",
+    "Wn = min(NormalisierungsDatensatz.DMS_score) # bitte daten richtig bennen, was bedeuten diese?\n",
+    "Wh = max(NormalisierungsDatensatz.DMS_score)\n",
     "Nu = -1.0\n",
     "No = 1.0\n",
     "Zz = 0\n",
     "\n",
-    "while Zz<=7466:\n",
+    "while Zz<=7466: # wie kommst du auf diese Zahl?\n",
     "    NormalisierungsDatensatz.iloc[Zz, 2] = ((NormalisierungsDatensatz.iloc[Zz, 2]) - Wn)/(Wh - Wn) * (No - Nu) + (-1)\n",
     "    Zz = Zz + 1\n",
-    "\n",
+    "    # hier wird der gegebene datensatz überschrieben: ist das gewollt?\n",
     "#print(NormalisierungsDatensatz.head(50))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "-3.9439220047195698"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NormalisierungsDatensatz.DMS_score"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-23T19:46:20.891227300Z",
+     "start_time": "2023-05-23T19:46:20.856705800Z"
+    }
+   }
   },
   {
    "cell_type": "code",
