added normalisation functions

--- a/Testing/Dario_Test_Normalisierung.ipynb
+++ b/Testing/Dario_Test_Normalisierung.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-05-24T12:43:23.231308Z",
-     "start_time": "2023-05-24T12:43:23.226068Z"
+     "end_time": "2023-05-25T12:07:59.618866800Z",
+     "start_time": "2023-05-25T12:07:59.531010200Z"
     }
    },
    "outputs": [],
@@ -18,13 +18,12 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import data_cleanup as dc\n",
-    "\n",
-    "dc.normalisierung()\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -87,14 +86,14 @@
    "source": [
     "fpath = '../DMS_data/P53_HUMAN_Giacomelli_NULL_Etoposide_2018.csv'\n",
     "df = pd.read_csv(fpath)\n",
-    "datensatz_normalisiert = normalisierung(df)\n",
+    "datensatz_normalisiert = dc.normalisierung(df)\n",
     "print(datensatz_normalisiert.DMS_score.head(50))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-24T12:29:00.131123Z",
-     "start_time": "2023-05-24T12:28:59.865989Z"
+     "end_time": "2023-05-25T12:08:48.792841300Z",
+     "start_time": "2023-05-25T12:08:46.524392800Z"
     }
    }
   },
