added distance matrix function

--- a/data_exploration/Distance matrix.ipynb
+++ b/data_exploration/Distance matrix.ipynb
@@ -13,17 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 98,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import data_cleanup as dc"
+    "import data_cleanup as dc\n",
+    "import data_exploration as de"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-30T07:54:31.165707300Z",
-     "start_time": "2023-05-30T07:54:31.118975400Z"
+     "end_time": "2023-05-31T12:23:52.692169600Z",
+     "start_time": "2023-05-31T12:23:52.637340Z"
     }
    }
   },
