--- a/data_exploration/Hierarchisches_Clustern.ipynb
+++ b/data_exploration/Hierarchisches_Clustern.ipynb
@@ -49,7 +49,10 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# Sci-kit learn sollte scipy mitinstallieren.... einfach mal googlen, zeigt cluster Methoden\n",
+    "# seaborn ist für plotten super! sns.clustermap googeln"
+   ],
    "metadata": {
     "collapsed": false
    }
