Anfänge der Dokumentation

--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -15,13 +15,18 @@
    "source": [
     "## Grobe Struktur:\n",
     "1) Data Cleanup: wir hatten diese Daten, das und das haben wir damit gemacht, so und so sehen unsere Daten jetzt aus\n",
-    "\n",
+    "    (i) NA - remove\n",
+    "    (ii) Z - Transformierung\n",
+    "    (iii) Normalisierung\n",
+    "` `\n",
+    "` `\n",
     "2) Data Exploration\n",
-    "(i) Distanzmatrix\n",
-    "(ii) Clustering\n",
-    "(iii) weitere Clustering-Methoden\n",
-    "(iv) Zusätzliche AS Daten\n",
-    "\n",
+    "    (i) Distanzmatrix\n",
+    "    (ii) Clustering\n",
+    "    (iii) weitere Clustering-Methoden\n",
+    "    (iv) Zusätzliche AS Daten\n",
+    "` `\n",
+    "` `\n",
     "3) T-tests"
    ],
    "metadata": {
