Ergänzungen bei Dokumentation, Wiederherstellung des Distanzmatrix-Codes

--- a/Documentation/P53 - DMS Documentation.ipynb
+++ b/Documentation/P53 - DMS Documentation.ipynb
@@ -46,7 +46,36 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Frido:"
+    "Frido:\n",
+    "Datensatz in handlicheres Format bringen mit df_transform:\n",
+    "\n",
+    "def df_transform(frame: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"df wird in Format WT_Sequenz-Mutierte_AS umgewandelt\"\"\"\n",
+    "    frame['position_mut'] = frame.mutant.str.slice(start=1, stop=-1).astype(int)\n",
+    "    frame['AS_old'] = frame.mutant.str.get(0)\n",
+    "    frame['AS_new'] = frame.mutant.str.get(-1)\n",
+    "    pivoted_frame = frame.pivot(index='AS_new', columns=['position_mut', 'AS_old'], values='DMS_score')\n",
+    "    return pivoted_frame\n",
+    "DF ist dadurch so angeordnet, dass die obere Zeile die WT-Seq. angibt und dann in den Spalten jeweils die DMS-Scores an der Position für die Mutationen mit den verschiedenen Basen stehen.\n",
+    "-> Sorgt für NA an den Stellen, bei denen kein Austausch durchgeführt wurde\n",
+    "Sorgt dafür, dass wir nachfolgende Berechnungen und Analysen einfacher mit dem Datensatz durchführen können.\n",
+    "\n",
+    "na_remove Funktion\n",
+    "def rmv_na(df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    \"\"\"Ändert die Werte eines df von NaN zu 0, wenn mutierte AS der WT AS entspricht\"\"\"\n",
+    "    for col in df.columns:\n",
+    "        for row in df.index:\n",
+    "            col_str = str(col)\n",
+    "            row_str = str(row)\n",
+    "            letters_row = ''.join(filter(str.isalpha, row_str))\n",
+    "            letters_col = ''.join(filter(str.isalpha, col_str))\n",
+    "\n",
+    "            if letters_row == letters_col and pd.isna(df.loc[row, col]):\n",
+    "                df.loc[row, col] = 0\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "-> Entfernt die NA bei denen der Austausch nicht durchgeführt wurde, weil die AS der ursprünglichen AS entsprechen würde und ersetzt sie mit Null, da keine Veränderung in der Fitness zu erwarten"
    ],
    "metadata": {
     "collapsed": false
@@ -83,7 +112,48 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Frido:"
+    "Frido:\n",
+    "### Bearbeiten des AS-Datensatz\n",
+    "aa = pd.read_csv('../DMS_data/aminoacids.csv')\n",
+    "\n",
+    "#Entfernen von Hydroxyproline und Pyroglutamat\n",
+    "aa_nat = aa.drop(index=[12, 18])\n",
+    "\n",
+    "#Speichern der \"Letter\"-Spalte für Benennung der neuen Spalten\n",
+    "labels_column = 'Letter'\n",
+    "\n",
+    "#Entfernen aller nicht-numerischen Spalten und pKx3, da unvollständig und Molecular Weight, da im Protein nicht relevant\n",
+    "aa_rmv = aa_nat.drop(['Name', 'Abbr','Letter', 'Molecular Formula','Molecular Weight', 'Residue Formula', 'pKx3'], axis=1)\n",
+    "\n",
+    "#z-transformationen, damit unterschiedliche Messwerte nicht unterschiedlich stark ins Gewicht fallen\n",
+    "aa_zscore = aa_rmv.apply(stats.zscore)\n",
+    "\n",
+    "#Berechnen der Distanzen der AA zueinander\n",
+    "aa_distances = euclidean_distances(aa_zscore.values)\n",
+    "\n",
+    "#Umwandeln zurück in einen DF zur besseren Übersicht\n",
+    "aa_df = pd.DataFrame(aa_distances, index=aa_nat[labels_column], columns=aa_nat[labels_column])\n",
+    "\n",
+    "### Distanzmatrix (DMS-Scores) -> Vllt. erklärst du vorher noch die Mean-Geschichte @Enno\n",
+    "\n",
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "\n",
+    "# Speichern der \"AS_new\"-Spalte für Benennung der neuen Spalten\n",
+    "labels_column = 'AS_new'\n",
+    "\n",
+    "# Transpose the DataFrame\n",
+    "mean_substitutions_t = mean_substitutions.T\n",
+    "\n",
+    "# Berechnen der Distanzen der AA zueinander\n",
+    "dms_distances = euclidean_distances(mean_substitutions_t.values)\n",
+    "\n",
+    "# Umwandeln zurück in einen DF zur besseren Übersicht\n",
+    "dms_distances_df = pd.DataFrame(dms_distances, index=mean_substitutions_t.index, columns=mean_substitutions_t.index)\n",
+    "\n",
+    "# Print the first 20 rows of mean_substitutions\n",
+    "dms_distances_df.head(20)\n",
+    "\n",
+    "-> Gibt uns die Abstände der AS zueinander basierend  auf den DMS-Scores bei Austausch von AS. Bin mir leider nicht sicher ob die Abstände der neuen oder alten AS zueinander berechnet werden. Und check auch nicht ganz wieso das nur mit der transponierten Matrix funktioniert\n"
    ],
    "metadata": {
     "collapsed": false
